--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ keywords: bitcoin,bitcoincash,bch,btc
 
 ##Some commonly used links
 links:
-  facebook: username
-  twitter: username
+ ## facebook: username
+ ## twitter: username
   email: bitcoincashcn@gmail.com
   github: bitcoincashcn
 
