--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-ï»¿# Welcome to Jekyll!
+# Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
 # which you are expected to set up once and rarely need to edit after that.
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: BitcoinCash Classicæ¯”ç‰¹å¸ç°é‡‘åŸé“¾
-brief-intro: BitcoinCash Classicæ¯”ç‰¹å¸ç°é‡‘åŸé“¾
+title: BitcoinCash Classic±ÈÌØ±ÒÏÖ½ğÔ­Á´
+brief-intro: ÀúÊ·ºÍÎ´À´
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://bitcoincashcn.github.io" # the base hostname & protocol for your site
 
@@ -19,24 +19,24 @@ permalink: /:year/:month/:day/:title/
 github_username:  bitcoincashcn
 email: bitcoincashcn@gmail.com
 # weibo_username: 
-zhihu_username: å¤åœŸé›·æŸ
+zhihu_username: ¹ÅÍÁÀ×°Ø
 # linkedIn_username: 
 # dribbble_username:
 
-description_footer: æœ¬ç«™è®°å½•æ¯”ç‰¹å¸ç°é‡‘åŸé“¾çš„ç¤¾åŒºåŒ–å®éªŒ
+description_footer: ±¾Õ¾¼ÇÂ¼±ÈÌØ±ÒÏÖ½ğÔ­Á´µÄÉçÇø»¯ÊµÑé
 
 # comments
 # two ways to comment, only choose one, and use your own short name
-# ä¸¤ç§è¯„è®ºæ’ä»¶ï¼Œé€‰ä¸€ä¸ªå°±å¥½äº†ï¼Œä½¿ç”¨è‡ªå·±çš„ short_name
+# Á½ÖÖÆÀÂÛ²å¼ş£¬Ñ¡Ò»¸ö¾ÍºÃÁË£¬Ê¹ÓÃ×Ô¼ºµÄ short_name
 # duoshuo_shortname: #hygblog
 disqus_shortname: bitcoincashcn
 
-# statistic analysis ç»Ÿè®¡ä»£ç 
-# ç™¾åº¦ç»Ÿè®¡ idï¼Œå°†ç»Ÿè®¡ä»£ç æ›¿æ¢ä¸ºè‡ªå·±çš„ç™¾åº¦ç»Ÿè®¡idï¼Œå³
+# statistic analysis Í³¼Æ´úÂë
+# °Ù¶ÈÍ³¼Æ id£¬½«Í³¼Æ´úÂëÌæ»»Îª×Ô¼ºµÄ°Ù¶ÈÍ³¼Æid£¬¼´
 # hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
-# xxxxxå­—ç¬¦ä¸²
+# xxxxx×Ö·û´®
 # baidu_tongji_id: cf8506e0ef223e57ff6239944e5d46a4
-# google_analytics_id: UA-72449510-4 # google åˆ†æè¿½è¸ªid
+# google_analytics_id: UA-72449510-4 # google ·ÖÎö×·×Ùid
 
 # Build settings
 markdown: kramdown
