--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 encoding: UTF-8
 # Site settings
-title: "BitcoinCash Classic比特币现金原链"
-brief-intro: "历史和未来"
+title: BitcoinCash Classic
+brief-intro: Clashic
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://bitcoincashcn.github.io" # the base hostname & protocol for your site
 
