--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: BitcoinCash Classic
-brief-intro: 历史和未来
+title: "BitcoinCash Classic"
+brief-intro: "历史和未来"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://bitcoincashcn.github.io" # the base hostname & protocol for your site
 
@@ -22,7 +22,7 @@ zhihu_username: gotolab
 # linkedIn_username: 
 # dribbble_username:
 
-description_footer: 本站记录比特币现金原链的社区化实验！
+description_footer: "本站记录比特币现金原链的社区化实验！"
 
 # comments
 # two ways to comment, only choose one, and use your own short name
