--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-#
+﻿#
 # This config file is meant for settings that affect your whole blog, values
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
@@ -6,7 +6,7 @@
 
 # Site settings
 title: "BitcoinCash Classic"
-brief-intro: "历史和未来"
+brief-intro: "关于比特币现金的实验"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://bitcoincashcn.github.io" # the base hostname & protocol for your site
 
