--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: "BitcoinCash Classic"
+title: "BitcoinCash Classic（BCC）"
 brief-intro: "Make BCH decentralized again!"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://bitcoincashcn.github.io" # the base hostname & protocol for your site
